@@ -1,0 +1,31 @@
+<html xmlns:tal="http://xml.zope.org/namespaces/tal"
+      xmlns:metal="http://xml.zope.org/namespaces/metal"
+      i18n:domain="plone">
+  <body>
+    <div metal:define-macro="portlet"
+         tal:omit-tag="">
+      <dl id="portlet_mina-linkedin">
+        <dt>LinkedIn</dt>
+        <dd>
+          <tal:linkedin
+              define="pcs context/@@plone_context_state"
+              tal:on-error="string:"
+              condition="python:pcs.is_portal_root() and pcs.is_view_template() and context.show_linkedin">
+            <script src="http://www.linkedin.com/companyInsider?script&useBorder=yes"
+                    type="text/javascript"></script>
+            <div id="linkedin-company-insider">
+              <tal:comment replace="nothing">
+                This LinkedIn box needs some javascript in the
+                head.  The next ids and tags must not be changed.
+              </tal:comment>
+              <span id="minaraad"></span>
+              <script type="text/javascript">
+                new LinkedIn.CompanyInsiderPopup("minaraad","Minaraad");
+              </script>
+            </div>
+          </tal:linkedin>
+        </dd>
+      </dl>
+    </div>
+  </body>
+</html>
